# RA8M1-main-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildinfo.json  main2.c  main_UOV-Ip.c  main_UOV-Is.c  main_UOV.c  main_g16.c  main_gf16.c  main_gf256.c  tmp.c
QEMU_M55/: QEMU_M55.cmake  retarget.c
QEMU_M55/CMSIS_Driver/: Driver_USART.c
QEMU_M55/RTE/: RTE_Components.h
QEMU_M55/RTE/Device/SSE-300-MPS3/: linker_SSE300MPS3_secure.ld  linker_SSE300MPS3_secure.lld  region_limits.h  startup_SSE300MPS3.c
RA8M1/ra_cfg/fsp_cfg/bsp/: bsp_cfg.h
RA8M1/script/: fsp.ld
RA8M1/shell-script/: jlink-commander.sh  jlink-gdb-server.sh
benchmarks/: main.c  main.c.bk  main_gf16.c  main_gf256.c  main_odd.c  randombytes.c
cmake/: gcc.cmake  llvm.cmake
ek-ra8m1/: Makefile  Makefile copy
ek-ra8m1/src/platform/: mps3.ld
finished/: vec_scalar_mul_gf16_mve.i
gf16/MAYO-matrix-multiplication/: mayo_gf16_mat_vec_mul_mve.c  mul_add_mat_x_m_mat.S  mul_add_mat_x_m_mat.i
gf16/UOV-Ip/: aes.h  ov.c  ov_publicmap.S  parallel_matrix_op.c  params.h  sign.c  sign_api-test.c  vec_scalar_mul_gf16_mve.i
gf16/UOV-Is/: aes.c  mat_vec_mul_gf16_mve.S  ov.c  ov_keypair.c  parallel_matrix_op.c  params.h  sign.c  sign_api-test.c  sign_api-test_backup.c  uov-Is.c  utils_randombytes.c
gf16/matrix-vector-multiplication/: mat_vec_mul_gf16_mve.i  mve_matrix_mul_gf16_main.c
gf16/trimat-2trimat-madd/: gf16trimat_2trimat_madd.S  gf16trimat_2trimat_madd.c  gf16trimat_2trimat_madd.i
gf16/uov-publicmap/: ov_publicmap.S  ov_publicmap.c
gf16/vector-scalar-multiplication/: vec_scalar_mul_gf16_mve.S  vec_scalar_mul_gf16_mve.c
gf256/UOV-Ip/: ov.c  ov_keypair_computation.c  ov_publicmap_gf256.S  parallel_matrix_op.c  uov-Ip.c  vec_scalar_mul_gf256_mve.i
gf256/matrix-vector-multiplication/: mat_vec_mul_gf256_mve.c  mat_vec_mul_gf256_mve.i
gf256/ov-publicmap/: ov_publicmap_gf256.S  ov_publicmap_gf256.c  ov_publicmap_gf256.i
gf256/ov_publicmap/: ov_publicmap_gf256.c
gf256/trimat-2trimat-madd/: gf256trimat_2trimat_madd.S  gf256trimat_2trimat_madd.c  gf256trimat_2trimat_madd.i
gf256/vector-scalar-multiplication/: vec_scalar_mul_gf256_mve.S  vec_scalar_mul_gf256_mve.c
lib/utils/: utils.c  utils.h
src/: gf16trimat_2trimat_madd_96_48_64_32.S  gf16trimat_eval_160_32_publicinputs.S  gf256trimat_eval_112_44_publicinputs.S  mat_vec_mul_gf16_mve.S  mat_vec_mul_gf16_mve.i  mat_vec_mul_gf256_mve.S  mat_vec_mul_gf256_mve.i  ov.c  ov_keypair.c  ov_publicmap.S  ov_publicmap_gf256.S  randombytes.h  sign.c  utils_prng.c  vec_scalar_mul_gf16_mve.i  vec_scalar_mul_gf256_mve.i
src_gf16_gf256/: gf256trimat_2trimat_madd_68_68_44_44.S  mat_vec_mul_gf256_mve.i
src_temp/: gf16mat_prod.S  gf256mat_prod.S  mat_vec_mul_gf16_mve.S  mat_vec_mul_gf256_mve.S  ov_publicmap.S
src_uov/: aes.c.d  aes128_4r_ffs.c.d  api.h  blas_matrix.c.d  blas_matrix_ref.c.d  fips202.c.d  keccakf1600.c.d  ov.c.d  ov_keypair.c.d  ov_keypair_computation.c.d  ov_publicmap.S  ov_publicmap.c.d  parallel_matrix_op.c.d  randombytes.c.d  sign.c  sign.c.d  utils_hash.c  utils_hash.c.d  utils_prng.c.d  utils_randombytes.c.d
src_uov-Ip/: mat_vec_mul_gf256_mve.i  ov.h  ov_publicmap.c  params.h
src_uov-Is/: mat_vec_mul_gf16_mve.i  ov.c  ov_keypair.c  ov_publicmap.i  parallel_matrix_op.c  params.h  utils_prng.c
test/: tests.c
test/unity/: unity_config.c
